src/styles/controls/buttons.scss
.button {
  @include t1;
  @include transition;

  display: inline-flex;
  background: var(--main-color);
  padding: var(--spacing-sm) var(--spacing-lg);
  color: #fff;
  text-align: center;
  cursor: pointer;
  text-decoration: none;
  border: 1px solid transparent;
  border-radius: var(--border-radius);

  &:hover,
  &:focus {
    background-color: rgba(var(--main-color-rgb) / 85%);
    outline: none;
    text-decoration: none;
  }

  &:active {
    transform: translateY(2px);
  }

  &.is-disabled,
  &:disabled {
    opacity: 0.5;
    cursor: not-allowed;
    pointer-events: none;
  }

  &.is-loading {
    animation: fade-out 1s linear infinite;
    background: var(--main-color);
    color: #fff;
  }
}

